[project]
name = "amarkov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "py-cord>=2.6.1",
]

[tool.pyright]
pythonVersion = "3.13"
reportMissingImports = "error"
reportMissingTypeStubs = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "error"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnusedCallResult = false
reportExplicitAny = false
reportAny = false
reportIgnoreCommentWithoutRule = false
reportUnusedParameter = false
reportUnusedVariable = false
reportImplicitOverride = false
reportImplicitStringConcatenation = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnannotatedClassAttribute = false
reportIncompatibleMethodOverride = false
reportCallInDefaultInitializer = false    # ruff tests it
enableTypeIgnoreComments = true
ignore = ["backend/tests"]
allowedUntypedLibraries = ["magicnet"]
reportUnsafeMultipleInheritance = false
reportMissingSuperCall = false
